Sutter Health/src/objects/Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_for_Thought__c</fullName>
        <label>Food for Thought</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Meeting_Agenda</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISSC</fullName>
                </value>
                <value>
                    <fullName>IS/SS/OGC</fullName>
                </value>
                <value>
                    <fullName>ChAM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ISSC - SAH</fullName>
                </value>
                <value>
                    <fullName>ISSC - SAFH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Comment__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ChAM_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Type__c</columns>
        <columns>Comment__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meeting_Type__c</field>
            <operation>equals</operation>
            <value>ChAM</value>
        </filters>
        <label>ChAM Meetings</label>
        <sharedTo>
            <group>Valley_Simple_App_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ISSC_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Type__c</columns>
        <columns>Comment__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meeting_Type__c</field>
            <operation>equals</operation>
            <value>ISSC</value>
        </filters>
        <label>ISSC Meetings</label>
        <sharedTo>
            <group>Valley_Simple_App_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MA-{000000000}</displayFormat>
        <label>Meeting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <recordTypes>
        <fullName>Committee</fullName>
        <active>true</active>
        <label>Committee</label>
    </recordTypes>
    <recordTypes>
        <fullName>IS_SS_OGC</fullName>
        <active>true</active>
        <label>IS/SS/OGC</label>
    </recordTypes>
    <recordTypes>
        <fullName>One_on_One</fullName>
        <active>true</active>
        <label>One-on-One</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>